After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755815 - Overwriting of closing parenthesis (brace, bracket and quotations) can't be turned off
Overwriting of closing parenthesis (brace, bracket and quotations) can't be t...
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: preferences
3.18.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-29 22:15 UTC by Diogo Campos
Modified: 2016-02-22 02:42 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Diogo Campos 2015-09-29 22:15:11 UTC
This setting doesn't turn off, even if the graphical settings (for JS) are unchecked and "org.gnome.builder.editor.language.js overwrite-braces = false".

Builder 3.18.0
Fedora 23
Comment 1 Christian Hergert 2015-09-29 22:23:02 UTC
Looks like this broke with the IdeFileSettings abstractions (so we could have layered settings from global/project/editorconfig/modelines).

Needs plumbing in IdeGsettingsFileSettings.
Comment 2 Christian Hergert 2016-02-22 02:42:18 UTC
Fixed in commit adc95865710f8a4ac07190524c3afc64c1b4b00f.