preferences: fix setting for overwrite-braces

This setting was being ignored due to the introduction of IdeFileSettings.
This plumbs the setting through and implements it in the GSettings
backend.

https://bugzilla.gnome.org/show_bug.cgi?id=755815