libide/ide-source-view.c
@@ -6531,6 +6531,8 @@ ide_source_view_init (IdeSourceView *self)
                           self, "indent-style", G_BINDING_SYNC_CREATE);
   egg_binding_group_bind (priv->file_setting_bindings, "show-right-margin",
                           self, "show-right-margin", G_BINDING_SYNC_CREATE);
+  egg_binding_group_bind (priv->file_setting_bindings, "overwrite-braces",
+                          self, "overwrite-braces", G_BINDING_SYNC_CREATE);
 
   priv->buffer_signals = egg_signal_group_new (IDE_TYPE_BUFFER);
 
