libide/preferences/ide-preferences-builtin.c
@@ -225,6 +225,7 @@ ide_preferences_builtin_register_languages (IdePreferences *preferences)
 
   ide_preferences_add_list_group (preferences, "languages.id", "basic", NULL, 0);
   ide_preferences_add_switch (preferences, "languages.id", "basic", "org.gnome.builder.editor.language", "trim-trailing-whitespace", "/org/gnome/builder/editor/language/{id}/", NULL, _("Trim trailing whitespace"), _("Upon saving, trailing whitespace from modified lines will be trimmed."), NULL, 10);
+  ide_preferences_add_switch (preferences, "languages.id", "basic", "org.gnome.builder.editor.language", "overwrite-braces", "/org/gnome/builder/editor/language/{id}/", NULL, _("Overwrite Braces"), _("Overwrite closing braces"), NULL, 20);
 
   ide_preferences_add_list_group (preferences, "languages.id", "margin", _("Margins"), 0);
   ide_preferences_add_radio (preferences, "languages.id", "margin", "org.gnome.builder.editor.language", "show-right-margin", "/org/gnome/builder/editor/language/{id}/", NULL, _("Show right margin"), NULL, NULL, 0);
